Footbar és "Főni" jegyzetek
Megnéztem a kódjaitokat és ahol lehet úgy alakítottam a footbart és navit hogy ne ütközzön a cuccaitokkal.
Megjegyezném, hogyha olyanokat adtok meg a css-eitekben, hogy img, meg h1, meg table az mindenre kihatással van, jelen esetben pl a navira és a footerre. Ha valami nem mükszik ott keressétek a hibát.

--- a/grand.html
+++ b/grand.html
@@ -29,7 +29,7 @@
         </a>
     </div>
 </header>
-<body class="bc">
+<body class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
     <h1>Gran Turismo</h1>
 
 <p>Gran Turismo (olasz, jelentése nagy túraautó), rövidítve GT, autóverseny-videójáték sorozat, melyet a Polyphony Digital fejleszt és a Sony Interactive Entertainment jelentet meg.</p>
@@ -50,7 +50,7 @@
 
 <p>Jamaucsi elmondása szerint az első két játék gépjármű-modelljei 300 poligonból, a Gran Turismo 3: A-Specben és a Gran Turismo 4-ben 4000 poligonból, míg a Gran Turismo 5-ben a „prémiumautók” akár 500 000 poligonból épültek fel.</p>
     
-
+<!--Hali, annyi hozzáfűzni valóm lenne a dolgodhoz, hogy próbáld meg a táblázataidat a szöveged szélességére editelni, mint az autósképeset. Ha nem megy mert köcsög a table és nem lehet normálisan konfigurálni, akkor szerintem fotózd ki a táblázatot és illeszd be imageként. Még sorokat is spórolnál vele. -->
 <table class="Típusok col-lg-12">
     <thead>
         <th>Cím</th>
@@ -125,7 +125,7 @@
         <td>-</td>
     </tr>
 </table>
-
+<!--ha tuds keress ennek a táblázatnak egy magasabb minőségű képet, vagy ha mindent a nyavajás opacity bánt akkor add meg opacity helyett background-color: 0,0,0,0.5-ben vagy valahogy így. Az remélhetőleg megoldja a bajokat.-->
 <h2>Másodlagos megjelenések</h2>
 
 <table class="Megjelenések col-lg-12">
@@ -342,7 +342,7 @@
 <footer>
     <div class="row footer">
         <div class="col-lg-5 col-md-6 col-sm-12">
-            <h1 class="footer-title">Oldalaink</h1>
+            <h4 class="footer-title">Oldalaink</h4>
             <ul class="f-ul">
                 <li>
                     <a href="index.html">Főoldal</a>
@@ -362,7 +362,7 @@
             </ul>
         </div>
         <div class="col-lg-5 col-md-6 col-sm-12">
-            <h1 class="footer-title">Elérhetőségeink</h1>
+            <h4 class="footer-title">Elérhetőségeink</h4>
             <ul class="f-ul">
                 <li>
                     Gémeskút Csapat
@@ -379,8 +379,8 @@
             </ul>
         </div>
         <div class="col-lg-2 col-md-12  col-sm-12">
-            <h1 class="footer-title">Követnél minket?</h1>
-            <p>Az alábbi linkeken megteheted:</p>
+            <h4 class="footer-title">Követnél minket?</h4>
+            <span>Az alábbi linkeken megteheted:</span>
             <div class="social-links">
                 <a href="https://www.instagram.com" target="_blank">
                     <img src="icon1.png" alt="Instagramm" class="f-ikon">
