--- a/lol.html
+++ b/lol.html
@@ -31,7 +31,7 @@
 </header>            
 <a href="#top"><img src="Névtelen.png" alt="" style="float: right; position: fixed; user-select:auto;"></a>
 
-<body id="top" class="bc">
+<body id="top" class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
         <div class="lol-body-div">
             <h1 class="lolcím"><b>Mi is az a League of Legends?</b></h1>
             <hr style="text-align: center;"><br>
@@ -199,7 +199,7 @@
                 </div>
             </div>
         </div>
-
+</div>
 <footer>
     <div class="row footer">
         <div class="col-lg-5 col-md-6 col-sm-12">
