--- a/mine.html
+++ b/mine.html
@@ -12,7 +12,7 @@
     <title>Gkút - Minecraft</title>
 </head>
 
-<body>
+<body class="bc">
     <header>
         <div class="topnav">
             <div class="left">
@@ -32,7 +32,7 @@
             </a>
         </div>
     </header>
-    <div id="body">
+    <div id="body"><!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
         <h1>Kezdetek</h1>
 
         A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
@@ -811,7 +811,7 @@
                 href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank">itt</a> teheted
             meg.</p>
     </div>
-
+<!--icipicit fura hogy ez a body-diven kívül került és így kijjebb van mint az összes többi szöveg-->
     Játéktörténet (elméletben)
     <!--Lejátszási lista a Game Theorists csatornáról-->
     <footer>
