--- a/abus.html
+++ b/abus.html
@@ -9,7 +9,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Rólunk</title>
 </head>
-<body class="bpic">
+<body class="bpic" id="top">
     <header>
         <div class="topnav">
             <div class="left">
@@ -30,7 +30,12 @@
         </div>
     </header>
     <div class="bc">
-        
+    <a href="#top"><span id="topbtn">&uarr;</span></a>
+    <div>
+        <h1></h1>
+        <p></p>
+    </div>
+    
     </div>
     <footer>
         <div class="row footer">
