--- a/grand.html
+++ b/grand.html
@@ -10,6 +10,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Grand Turismo</title>
 </head>
+<body class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
 <header>
     <div class="topnav">
         <div class="left">
@@ -28,8 +29,8 @@
             <img id="logo" src="logo1.png" alt="Logo" title="Vissza a kezdőlapra">
         </a>
     </div>
-</header>
-<body class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
+</header> <!--Dobd be majd a szövegeidet divekbe! Kell az a reszponzivitás! :-) -->
+<a href="#top"><span id="topbtn">&uarr;</span></a>
     <h1>Gran Turismo</h1>
 
 <p>Gran Turismo (olasz, jelentése nagy túraautó), rövidítve GT, autóverseny-videójáték sorozat, melyet a Polyphony Digital fejleszt és a Sony Interactive Entertainment jelentet meg.</p>
