--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Gkút - Főoldal</title>
 </head>
 
-<body class="bc">
+<body class="bc" id="top">
     <header>
         <div class="topnav">
             <div class="left">
@@ -32,6 +32,7 @@
             </a>
         </div>
     </header>
+    <a href="#top"><span id="topbtn">&uarr;</span></a>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="grand.html">
