--- a/lol.html
+++ b/lol.html
@@ -10,6 +10,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - League of Legends</title>
 </head>
+<body id="top" class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
 <header>
     <div class="topnav">
         <div class="left">
@@ -28,10 +29,8 @@
             <img id="logo" src="logo1.png" alt="Logo" title="Vissza a kezdőlapra">
         </a>
     </div>
-</header>            
-<a href="#top"><img src="Névtelen.png" alt="" style="float: right; position: fixed; user-select:auto;"></a>
-
-<body id="top" class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
+</header>
+<a href="#top"><span id="topbtn">&uarr;</span></a>            
         <div class="lol-body-div">
             <h1 class="lolcím"><b>Mi is az a League of Legends?</b></h1>
             <hr style="text-align: center;"><br>
