--- a/mine.html
+++ b/mine.html
@@ -12,7 +12,7 @@
     <title>Gkút - Minecraft</title>
 </head>
 
-<body class="bc">
+<body class="bc" id="top">
     <header>
         <div class="topnav">
             <div class="left">
@@ -32,6 +32,7 @@
             </a>
         </div>
     </header>
+    <a href="#top"><span id="topbtn">&uarr;</span></a>
     <div id="body"><!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
         <h1>Kezdetek</h1>
 
