bugfix + flex + egyszer nem megfejelt billentyű név

--- a/mine.html
+++ b/mine.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <a href="#top"><span id="topbtn">&uarr;</span></a>
-    <div id="body"><!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
+    <div id="body">
         <h1>Kezdetek</h1>
 
         A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
@@ -48,7 +48,10 @@
         <h1>Mobok</h1>
         <h2>Overworld</h2>
         <h3>Békés</h3>
-        
+        <figure>
+            <img src="minenhandwerkképek/bari.jpg" class="img2">
+            <figcaption>Bárány</figcaption>
+        </figure>
         <h3>Semleges</h3>
 
         <h3>Aggresszív</h3>
@@ -723,7 +726,7 @@
                         </li>
                     </ul>
                 </ul>
-                <img src="minenhandwerkképek/sniffi.jpg" alt="sniffer" title="sniffer">
+                <img src="minenhandwerkképek/sniffi.jpg" alt="sniffer" title="sniffer" class="img">
             </div>
 
 
@@ -746,7 +749,7 @@
                         </li>
                     </ul>
                 </ul>
-                <img src="minenhandwerkképek/torchflower.png" alt="Torchflower" title="Fáklyavirág">
+                <img src="minenhandwerkképek/torchflower.png" alt="Torchflower" title="Fáklyavirág" class="img">
             </div>
         </div>
 
@@ -759,7 +762,7 @@
                         Cseresznye erdő Biome-ot hozzáadtuk szép cseresznyefákkal.
                     </li>
                 </ul>
-                <img src="minenhandwerkképek/cherryblossom.jpg" alt="cherryblossom" title="cseresznyefa">
+                <img src="minenhandwerkképek/cherryblossom.jpg" alt="cherryblossom" title="cseresznyefa" class="img">
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -769,7 +772,7 @@
                         Új fa szett cseresznyefából
                     </li>
                 </ul>
-                <img src="minenhandwerkképek/wood set.PNG" alt="cseresznyefa itemek" title="cseresznyefa szett">
+                <img src="minenhandwerkképek/wood set.PNG" alt="cseresznyefa itemek" title="cseresznyefa szett" class="img">
             </div>
         </div>
 
@@ -781,7 +784,7 @@
                         A kefe egy új készíthető item amivel meg lehet kefélni dolgokat.
                     </li>
                 </ul>
-                <img src="minenhandwerkképek/brush.PNG" alt="kefe" title="kefe">
+                <img src="minenhandwerkképek/brush.PNG" alt="kefe" title="kefe" class="img">
 
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -795,7 +798,7 @@
                         Ha gyanús homokot kefélünk akkor tárgyakat tudunk belőle kiszedni amiket régen ástak el.
                     </li>
                 </ul>
-                <img src="minenhandwerkképek/susy sand.jpg" title="suspicious sand" alt="suspicious sand">
+                <img src="minenhandwerkképek/susy sand.jpg" title="suspicious sand" alt="suspicious sand" class="img">
             </div>
 
 
@@ -805,16 +808,13 @@
                     <li>Cerépdarabokon képek vannak.</li>
                     <li>Nem lehet őket elkészíteni csak Gyanús homok kefélésével lehet őket megszerezni.</li>
                 </ul>
-                <img src="minenhandwerkképek/pottery.PNG" alt="edény" title="fazekas agyagedények">
+                <img src="minenhandwerkképek/pottery.PNG" alt="edény" title="fazekas agyagedények" class="img">
             </div>
         </div>
         <p>Részletesebb leírást és a Snapshot kipróbálását <a
                 href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank">itt</a> teheted
             meg.</p>
     </div>
-<!--icipicit fura hogy ez a body-diven kívül került és így kijjebb van mint az összes többi szöveg-->
-    Játéktörténet (elméletben)
-    <!--Lejátszási lista a Game Theorists csatornáról-->
     <footer>
         <div class="row footer">
             <div class="col-lg-5 col-md-6 col-sm-12">
