1. smol javító csomag

--- a/lol.html
+++ b/lol.html
@@ -10,7 +10,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - League of Legends</title>
 </head>
-<body id="top" class="bc"> <!--Bocs emiatt, ha nem tetszik nyugodtan vedd ki. Szerintem stílusosabb mint a fehér.-->
+<body id="top" class="bc"> <!--Nekem mindegy hogy néz ki. A lényeg hogy kinéz valahogy. De amúgy jó lesz az oldal?-->
 <header>
     <div class="topnav">
         <div class="left">
@@ -103,17 +103,17 @@
 
             <h5>A játék jelenleg többféle erőforrást tartalmaz, valamint különféle módszereket a képességhasználat korlátozására. Egy hős maximum egy erőforrással rendelkezik.</h5>
 
-            <li><b>Mana</b>: a legáltalánosabb erőforrás, a legtöbb hős manát (mágikus energiát) használ a képességeihez. A maximális értéke és a visszatöltődés sebessége is növekszik szintlépéskor, illetve tárgyakkal vagy fogyaszthatókkal is fokozható. A játékban kék színnel jelölik.</p>
+            <li><b>Mana</b>: A legáltalánosabb erőforrás, a legtöbb hős manát (mágikus energiát) használ a képességeihez. A maximális értéke és a visszatöltődés sebessége is növekszik szintlépéskor, illetve tárgyakkal vagy fogyaszthatókkal is fokozható. A játékban kék színnel jelölik.</p>
 
             <li><b>Energia</b>: Öt hős által (Akali, Kennen, Shen, Zed és Lee Sin) használt erőforrás. Jellemzője, hogy a maximális alapértéke rögzített (200), valamint a visszatöltődés sebessége is kevésbé befolyásolható, viszont alapvetően gyors. Ez azt eredményezi, hogy az erőforrás a manával ellentétben hosszú távon nem fogy el, viszont rövidtávon a képességek túlzott használatával könnyen kimerülhet.</p>
 
-            <li><b>Düh/Vadság</b>: ez az erőforrás nulláról indul, nagyrészt alaptámadásokkal növekszik, és a képességek használatát erősíti, és röviddel a harc befejezése után folyamatosan fogy. Maximum értéke 100, illetve 5. Jelenleg 5 hős, Tryndamere, Renekton, Shyvana, Gnar és Rek'Sai használja a Dühöt képességeik erősítésére, míg Rengar a Vadságot használja fel erőforrásként. A Düh piros, a Vadság narancssárga színnel van jelölve.</p>
+            <li><b>Düh/Vadság</b>: Ez az erőforrás nulláról indul, nagyrészt alaptámadásokkal növekszik, és a képességek használatát erősíti, és röviddel a harc befejezése után folyamatosan fogy. Maximum értéke 100, illetve 5. Jelenleg 5 hős, Tryndamere, Renekton, Shyvana, Gnar és Rek'Sai használja a Dühöt képességeik erősítésére, míg Rengar a Vadságot használja fel erőforrásként. A Düh piros, a Vadság narancssárga színnel van jelölve.</p>
 
-            <li><b>Hő</b>: jelenleg egy hős használja, (Rumble) a mechanikus gépezetének a túlmelegedését mérve ezzel. Minden képességhasználattal növekszik, bizonyos határ felett erősíti a képességeit, valamint ha eléri a maximumot akkor a túlmelegedett gép kihűlésig nem tud több képességet használni. Képességhasználat nélkül folyamatosan hűl a gép, fogyasztva az erőforrást.</p>
+            <li><b>Hő</b>: Jelenleg egy hős használja, (Rumble) a mechanikus gépezetének a túlmelegedését mérve ezzel. Minden képességhasználattal növekszik, bizonyos határ felett erősíti a képességeit, valamint ha eléri a maximumot akkor a túlmelegedett gép kihűlésig nem tud több képességet használni. Képességhasználat nélkül folyamatosan hűl a gép, fogyasztva az erőforrást.</p>
 
-            <li><b>Bátorság</b>: egy hős használja, mégpedig Kled. Ha Kled gyíkja, Skaarl elfut, bátorsággal lehet visszahívni, melyet ellenséges hősök sebzésével, vagy minionok megölésével lehet szerezni. Ha a bátorságcsík eléri a maximumot, Skaarl visszajön.</p>
+            <li><b>Bátorság</b>: Egy hős használja, mégpedig Kled. Ha Kled gyíkja, Skaarl elfut, bátorsággal lehet visszahívni, melyet ellenséges hősök sebzésével, vagy minionok megölésével lehet szerezni. Ha a bátorságcsík eléri a maximumot, Skaarl visszajön.</p>
 
-            <li><b>Élet</b>: öt karakter a saját életerejéből veszít, amikor bizonyos képességeket használ. Ezeknél a karaktereknél az élet visszatöltése megoldott, így általában nem áll fent az a veszély, hogy "túlhasználja" a képességeit az adott karakter (Pl.: Zac).</p>
+            <li><b>Élet</b>: 5 karakter a saját életerejéből veszít, amikor bizonyos képességeket használ. Ezeknél a karaktereknél az élet visszatöltése megoldott, így általában nem áll fent az a veszély, hogy "túlhasználja" a képességeit az adott karakter (Pl.: Zac).</p>
 
             <li><b>Semmi</b>: vannak olyan karakterek is, amelyeket csupán a töltési idő korlátoz képességeik használatában (Pl.: Riven).  Illetve vannak hősök akik ezt az erőforrást a passzív képességükkel felhasználják (Pl.: Yasuo).</p>
 
@@ -122,11 +122,11 @@
             <h2 class ="lol-közép"> Eszközök</h2><hr><br>
             <h5>Ezek olyan tárgyak, melyek nagyban módosítják az adott karakter erejét.</h5>
 
-            <p> Jelenleg 6+1 tárgyat hordhat magával minden hős, így ezek összeválogatása kulcsfontosságú a játékmenet tekintetében. Ezeket kizárólag a boltban lehet megvenni, a Kezdő Medencétől nem messze. Ez alól kivétel az Ordító Szakadék, mivel itt csak bizonyos feltételek mellett lehet vásárolni. A boltban az eszközöket el is lehet adni, amiért a teljes ár 70%-át kapjuk vissza. Kivételt képeznek a Kutató- és Doran tárgyak, azok, amiknek arany bevételük van, a fogyaszthatók és az Őrangyal (Guardian Angel), melyek után az értékük 40%-a jár vissza.</p>
+            <p> Jelenleg 6+1 tárgyat hordhat magával minden hős, így ezek összeválogatása kulcsfontosságú a játékmenet tekintetében. Ezeket kizárólag a boltban lehet megvenni, a Kezdő Medencétől nem messze. Ez alól kivétel az Ordító Szakadék, mivel itt csak bizonyos feltételek mellett lehet vásárolni. A boltban az eszközöket el is lehet adni, amiért a teljes ár 70%-át kapjuk vissza. Kivételt képeznek a Doran tárgyak, azok, amiknek arany bevételük van, a fogyaszthatók és az Őrangyal, melyek után az értékük 40%-a jár vissza.</p>
 
             <p> Azok a tárgyak, amik egyedi passzív képességekkel rendelkeznek, nem halmozhatók más, azonos nevű passzív képességekkel. A tárgyak csoportokra oszthatók használatuk szerint: támadó, védekező, varázserőt növelő, talizmánok, illetve egyéb tárgyak, mely csoportba a fogyaszthatók is beletartoznak.</p>
 
-            <p>Vannak olyan tárgyak is, amit csak távolsági bajnokok számára használható  (Runaan hurrikánja), ezen felül olyanok is vannak, melyek kizárólag bizonyos bajnokok által használhatók (Kalista - Fekete lándzsa (The Black Spear), Viktor - A Hex agy (The Hex Core)).</p>
+            <p>Vannak olyan tárgyak is, amit csak távolsági hősök számára használható  (Runaan hurrikánja), ezen felül olyanok is vannak, melyek kizárólag bizonyos hősök által használhatók (Kalista - Fekete lándzsa (The Black Spear), Viktor - A Hex agy (The Hex Core)).</p>
 
 
 
