--- a/mine.html
+++ b/mine.html
@@ -52,6 +52,10 @@
             <img src="minenhandwerkképek/bari.jpg" class="img2">
             <figcaption>Bárány</figcaption>
         </figure>
+        <figure>
+            <img src="minenhandwerkképek/Axolotl.jpg" class="img2">
+            <figcaption>Axolotl</figcaption>
+        </figure>
         <h3>Semleges</h3>
 
         <h3>Aggresszív</h3>
