--- a/lol.html
+++ b/lol.html
@@ -58,7 +58,7 @@
                 <h2 class ="lol-közép"> Az Igazság mezeje</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-lg-7"><p><b>Idézők Szurdoka</b>: a klasszikus pálya, melyen három ösvény (top-felső, mid-középső és bot-alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány. </p>
+                    <div class="col-lg-7"><p><b>Idézők Szurdoka</b>: A klasszikus pálya, melyen három ösvény (felső, középső és alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található számos fontos szörny, melyeknek megölése a csapatnak számos bónuszt biztosít, ilyenek pl: Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány(ok). </p>
                     </div>
                     <div class="col-lg-5"><img src="lol képek\baron.jpg" class="sz100"><figcaption>A Baron Nashor mérete egy hőshöz viszonyítva</figcaption></div>
                 </div><br>
@@ -66,7 +66,7 @@
                     <h2 class="lol-közép">Ordító Szakadék:</h2>
                     <hr>
                     <div class="row">
-                        <div class="col-lg-7"><p>a 2013 április végén megjelent (<b>Aram</b>) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. </p></div>
+                        <div class="col-lg-7"><p>A 2013 április végén megjelent (<b>Aram</b>) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. </p></div>
                         <div class="col-lg-5"><img src="lol képek/aram-map.jpg" alt="Aram térképe" class="sz100"><figcaption>Az Aram térképe</figcaption></div>
                     </div>
 
