--- a/mine.html
+++ b/mine.html
@@ -56,6 +56,31 @@
             <img src="minenhandwerkképek/Axolotl.jpg" class="img2">
             <figcaption>Axolotl</figcaption>
         </figure>
+        <figure>
+            <img src="minenhandwerkképek/chimken.jpg" class="img2">
+            <figcaption>Csirke</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Mooshroom.jpg" class="img2">
+            <figcaption>Mooshroom</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Pig.jpg" class="img2">
+            <figcaption>Disznó</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/tehén.jpg" class="img2">
+            <figcaption>Tehén</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/ocelot.jpg" class="img2">
+            <figcaption>Ocelot</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Fox.jpg" class="img2">
+            <figcaption>Róka</figcaption>
+        </figure>
+
         <h3>Semleges</h3>
 
         <h3>Aggresszív</h3>
