--- a/lol.html
+++ b/lol.html
@@ -48,7 +48,7 @@
             <h3 class ="lol-közép"> Általános tudnivalók</h3>
             <div class="container">
                     <div class="row">
-                        <div class="col-lg-12"> <p> A játékos regisztráció után az úgynevezett láthatatlan "Idéző" szerepébe bújik, aki egy egyedülálló mágikus képességekkel rendelkező hőst tud irányítani akinek célja, hogy csapattársai segítségével legyőzze az ellenfél csapatot. A három különböző pályán a játékosok két egyenlő, 3 illetve 5 fős csapatokra oszlanak, mindenki egy általa vagy véletlenszerűen választott hőst irányítva. A csapatok a térkép két átellenes pontján kezdenek egy Érkező Medence (Spawn Pool) nevű helyen, a Nexus (főközpont, szó szerint: összeköttetés) mellett. Az ellenfél Nexusának elpusztításával lehet megnyerni a játékot, vagy ha az ellenfél csapata feladja.</p>
+                        <div class="col-lg-12"> <p> A játékos regisztráció után az úgynevezett láthatatlan "Idéző" szerepébe bújik, aki egy egyedülálló mágikus képességekkel rendelkező hőst tud irányítani akinek célja, hogy csapattársai segítségével legyőzze az ellenfél csapatot. A három különböző pályán a játékosok két egyenlő, 3 illetve 5 fős csapatokra oszlanak, mindenki egy általa vagy véletlenszerűen választott hőst irányítva. A csapatok a térkép két átellenes pontján kezdenek egy Érkező Medence nevű helyen, a Nexus (főközpont) mellett. Az ellenfél Nexusának elpusztításával lehet megnyerni a játékot, vagy ha az ellenfél csapata feladja.</p>
                     <p> A hősök a játék során folyamatosan tapasztalatot és aranyat gyűjtenek, ellenséges lények (hősök és minionok) illetve semleges szörnyek legyilkolásával, valamint tornyok és inhibitorok lerombolásával. Az aranyból különféle tárgyakat vehetnek, amelyek fokozzák a hatékonyságukat, képességeik erejét, vagy védelmet adnak. Első szinten kezdenek és a 18. szintig fejlődhetnek minden játék alkalmával, míg az Idézői szint, folyamatosan növekszik.</p></div>
                     </div>
                 </div>
@@ -145,14 +145,14 @@
                         <div class="col-lg-6 col-md-12 col-sm-12"><img src="lol képek\cannon.jpg" class="sz100"> <figcaption>Az ostromminionok</figcaption></div>
                         <div class="col-lg-6 col-md-12 col-sm-12"><img src="lol képek\Super_minion.jpg" class="sz100"> <figcaption>A Nexustörő minionok</figcaption></div>
                     </div>
-                </div>
+                </div><br>
             <h2 class ="lol-közép">Rúnák</h2><hr><br>
             <p>A Rúnák olyan erősítések, melyeket az Idéző azelőtt szerez be és állít össze, mielőtt hősével az Igazság Mezejére lépne. A rúnákon belül 5 fajta típust különböztetünk meg. Mindegyiken belül vannak fő rúnák, ezek közül egyet lehet választani az elsődleges rúnához.</p> 
             <p>Mind az 5 rúna típusban van 3 sor sima rúna, minden sorban 3 rúna van azaz összesen 9 rúna van egy rúna típusban. Egy rúna sorból egy rúnát lehet kiválasztani (Így 4 rúna lesz az elsődleges rúna fából).</p>
             <p>Másodlagos rúna választása kor a maradék 4 rúna típus közül választhatunk. Itt nem választhatunk fő rúnát és csak 2 sorból választhatunk nem 3-ból (Így 2 rúna lesz a másodlagos rúna fából). </p>
             <p>A játék 5 rúnatípust ajánl fel, de bizonyos hősök számára más elsődleges-másodlagos rúna kombinációk lehetnek előnyösebbek, ezért a játékosok kettő saját rúna-oldalt is összeállíthatnak, az alapértelmezetteken kívül.</p>
             <h3 class ="lol-közép">Típusok (előre beállított)</h3>
-
+                    
             <p class ="lol-közép"></p>
             <div class="container">
                 <div class="row">
@@ -167,9 +167,9 @@
             </div>
                     <div class="col-lg-8"><img src="lol képek\runes_2018.jpg", style="max-width: 100%;"> <figcaption>A rúnák típusai: Precizitás, Uralom, Boszorkányság, Elszántság és Ihlet</figcaption></div>
                 </div>
-            </div>
+            </div><br><br>
             <h2 class ="lol-közép">Épületek</h2>
-            <hr><br>
+            <hr>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6"><b>Torony</b>: célja a védelem, a minionhullámok lassítása. Minden lövéssel 37%-kal növekszik a sebzésük, így nem érdemes sokáig célpont maradni. Mikor elérte a maximális sebzési bónuszt (75%), +25%-kal többet sebez. A szövetséges tornyok közelében a láthatatlan ellenséges egységek láthatóvá, így támadhatóvá válnak. A külső tornyok életereje 4000 pont, a belső tornyoké 4000 pont, az inhibitor tornyok 4000 ponttal és élet-regenerálódással, a nexus tornyok 2500 ponttal és szintén élet-regenerálódással rendelkeznek.</p></div>
@@ -185,7 +185,7 @@
                     <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png">
             <figcaption>A nexus obeliszk<figcaption></div>
                 </div>
-            </div>
+            </div><br><br>
             <h2 class ="lol-közép">A játék mint e-sport</h2>
             <hr>
             <div class="container">
@@ -198,7 +198,7 @@
                 </div>
             </div>
         </div>
-</div>
+</div><br>
 <footer>
     <div class="row footer">
         <div class="col-lg-5 col-md-6 col-sm-12">
