--- a/mine.html
+++ b/mine.html
@@ -80,22 +80,112 @@
             <img src="minenhandwerkképek/Fox.jpg" class="img2">
             <figcaption>Róka</figcaption>
         </figure>
+        <figure>
+            <img src="minenhandwerkképek/Villager.jpg" class="img2">
+            <figcaption>Falusi</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/squid.PNG" class="img2">
+            <figcaption>Tintahal</figcaption>
+        </figure>
 
         <h3>Semleges</h3>
-
+        <figure>
+            <img src="minenhandwerkképek/kutyus.jpg" class="img2">
+            <figcaption>Kutya</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/lama.jpg" class="img2">
+            <figcaption>Láma</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Bee.jpg" class="img2">
+            <figcaption>Méh</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/iron.jpg" class="img2">
+            <figcaption>Iron gólem</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/jegesmaci.jpg" class="img2">
+            <figcaption>Jegesmedve</figcaption>
+        </figure>
         <h3>Aggresszív</h3>
-
+        <figure>
+            <img src="minenhandwerkképek/Zombie.jpg" class="img2">
+            <figcaption>Zombi</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Drowned.PNG" class="img2">
+            <figcaption>Drowned</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/skeli.jpg" class="img2">
+            <figcaption>Csontváz</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/stray.jpg" class="img2">
+            <figcaption>Stray</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/spid.jpg" class="img2">
+            <figcaption>Pók</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Cavespid.jpg" class="img2">
+            <figcaption>Bányapók</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Creeper.jpg" class="img2">
+            <figcaption>Creeper</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/slime.jpg" class="img2">
+            <figcaption>Nyálka</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/Vex.jpg" class="img2">
+            <figcaption>Vex</figcaption>
+        </figure>
 
         <h2>Nether</h2>
         <h3>Békés</h3>
+        <figure>
+            <img src="minenhandwerkképek/strider.PNG" class="img2">
+            <figcaption>strider</figcaption>
+        </figure>
         <h3>Semleges</h3>
         <h3>Aggresszív</h3>
-
+        <figure>
+            <img src="minenhandwerkképek/blaze.jpg" class="img2">
+            <figcaption>Blaze</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/ghast.jpg" class="img2">
+            <figcaption>Szellem</figcaption>
+        </figure>
+        <figure>
+            <img src="minenhandwerkképek/magmacube.jpg" class="img2">
+            <figcaption>Magmakocka</figcaption>
+        </figure>
+        <h3>Boss</h3>
+        <figure>
+            <img src="minenhandwerkképek/wither.jpg" class="img2">
+            <figcaption>Wither</figcaption>
+        </figure>
         <h2>End</h2>
 
         <h3>Semleges</h3>
+        <figure>
+            <img src="minenhandwerkképek/Enderman.jpg" class="img2">
+            <figcaption>Enderman</figcaption>
+        </figure>
 
         <h3>Boss</h3>
+        <figure>
+            <img src="minenhandwerkképek/dragi.jpg" class="img2">
+            <figcaption>Ender Dragon</figcaption>
+        </figure>
 
 
         <h1>Játékmódok</h1>
