--- a/abus.html
+++ b/abus.html
@@ -9,7 +9,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Rólunk</title>
 </head>
-<body class="bpic" id="top">
+<body class="bc" id="top">
     <header>
         <div class="topnav">
             <div class="left">
@@ -29,11 +29,11 @@
             </a>
         </div>
     </header>
-    <div class="bc">
+    <div>
     <a href="#top"><span id="topbtn">&uarr;</span></a>
     <div>
-        <h1></h1>
-        <p></p>
+        <h1>Csapatunkról</h1>
+        <p>Csapatunk 2023 telén alakult és egy cél lebegett a szemünk előtt</p>
     </div>
     
     </div>
