--- a/lol.html
+++ b/lol.html
@@ -10,7 +10,12 @@
     <script src="sybi.js"></script>
     <title>Gkút - League of Legends</title>
 </head>
-<body id="top" class="bc"> <!--Nekem mindegy hogy néz ki. A lényeg hogy kinéz valahogy. De amúgy jó lesz az oldal?-->
+<body id="top" class="bc"> <!--Nekem mindegy hogy néz ki. A lényeg hogy kinéz valahogy. De amúgy jó lesz az oldal? -> 
+    Nekem bejön. Tetszik a középre igazítás, szépen elrendezted a képeket, jó a tagolás, kifogástalan a reszponzivitás, mit ne mondjak, nekem nagyon bejön! 
+    Ezért is nem bajlódtam azzal, hogy mindenfélét irogáljak a kódodba, mert ami működik az működik. Jól dolgoztál! 
+    Amúgy majd rugdosd a helyemben is seggbe a másik két jóembert! 5 napunk maradt és még mindig sok dolguk van... mondjuk a Rólunk állapota miatt én sem beszélhetek,(egyszerűen nem tudom mit kezdjek vele, várom az ihletet) de hát ja. 
+    Szorít az idő. Véglegesítenünk kell. 
+    Ennyi lettem volna. Majd csütörtökön tali! :-) -->
 <header>
     <div class="topnav">
         <div class="left">
