--- a/mine.html
+++ b/mine.html
@@ -33,7 +33,19 @@
         </div>
     </header>
     <a href="#top"><span id="topbtn">&uarr;</span></a>
-    <div id="body">
+    <div id="body"> <!--Hali! Nem akarok nyaggatózni meg minden, de majd ha időd engedi csinálj légyszi egy középre igazítást/margózást az oldalon! (nem kell sietni, még van kb 4 napunk, hogy összehozzunk ezt az egészet, de kellene a dolog) A másik kettő jóember oldala is olyan, a Rólunkot is olyanra akarom, ha rájövök végre, hogy mit kezdjek vele... Szóval a lényeg: Legalább a szövegek legyenek középen, ha minden másnak a reszponzivitását elizélná a cucc. 
+    Amúgy remélem jól haladsz a könyvvel, ide írok pár random dolgot ami a vége után úgy megmaradt mert miért ne:
+    Alexandar/Pax == Best Boii (még nem döntöttem el)
+    Virginia == Best Girl  Ephrain == kinda wasted
+    Atlantia == Csunya néni/underrated @un+ tag csak naggyon gáz
+    Kalindora/Rhonna == Best Support
+    Seraphina, Lysander és a Förtelem == De most komolyan miért?
+    Viktra == Need more, but E for Effort  
+    Diomédész == Egyre jobban bírom a csókát
+    Apollóniusz == Nincs valami sok értelme
+    Ennyi lettem volna, csütörtökön tali!
+
+      -->
         <h1>Kezdetek</h1>
 
         A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
